*SVN*

* Request profiler.  [Jeremy Kemper]

* Disabled checkboxes don't submit a form value.  #9301 [vladr, robinjfisher]

* Added tests for options to ActiveRecordHelper#form. Closes #7213 [richcollins, mikong, mislav]

* Changed before_filter halting to happen automatically on render or redirect but no longer on simply returning false [DHH]

* Ensure that cookies handle array values correctly.  Closes #9937 [queso]

* Make sure resource routes don't clash with internal helpers like javascript_path, image_path etc.  #9928 [gbuesing]

* caches_page uses a single after_filter instead of one per action.  #9891 [lifofifo]

* Update Prototype to 1.6.0_rc1 and script.aculo.us to 1.8.0 preview 0.  [sam, madrobby]

* Dispatcher: fix that to_prepare should only run once in production.  #9889 [Nathaniel Talbott]

* Memcached sessions: add session data on initialization; don't silently discard exceptions; add unit tests.  #9823 [kamk]

* error_messages_for also takes :message and :header_message options which defaults to the old "There were problems with the following fields:" and "<count> errors prohibited this <object_name> from being saved".  #8270 [rmm5t, zach-inglis-lt3]

* Make sure that custom inflections are picked up by map.resources.  #9815 [mislav]

* Changed SanitizeHelper#sanitize to only allow the custom attributes and tags when specified in the call [DHH]

* Extracted sanitization methods from TextHelper to SanitizeHelper [DHH]

* rescue_from accepts :with => lambda { |exception| ... } or a normal block.  #9827 [lifofifo]

* Add :status to redirect_to allowing users to choose their own response code without manually setting headers. #8297 [codahale, chasgrundy]

* Add link_to :back which uses your referrer with a fallback to a javascript link. #7366 [eventualbuddha, tarmo]

* error_messages_for and friends also work with local variables.  #9699 [Frederick Cheung]
