@@ -1,1 +1,2 @@
 <%= hash_object[:first_name] %>
+<%= object[:first_name].reverse %>
